# xDuinoRails_SUSI

./: AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md  library.properties
.github/workflows/: build.yml
docs/: API.md  RCN-600.de.md  RCN-600.en.md  RCN-601.de.md  RCN-601.en.md  RCN-602.de.md  RCN-602.en.md
examples/Master/: Master.ino  README.md  SoundDecoder.ino
examples/Slave/: README.md  Slave.ino
hardware/: README.md
src/: SUSI_Master.cpp  SUSI_Master.h  SUSI_Packet.h  SUSI_Slave.cpp  SUSI_Slave.h  susi_commands.h  susi_crc.cpp  susi_crc.h  susi_defines.h  susi_hal.cpp  susi_hal.h  susi_master.cpp  susi_master.h  susi_packet.h  susi_response.h  susi_slave.cpp  susi_slave.h
test/: Arduino.h  EEPROM.h  e2e_tests.cpp  mock_hal.cpp  mock_hal.h  mock_susi_hal.h  test_susi_api.cpp  test_susi_e2e.cpp  test_susi_sound.cpp  unit_tests.cpp
